--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
     <!-- Main Activity -->
     <string name="main_select_pickup_and_dropoff">Please Select pickup date and drop-off date.</string>
     <string name="user_is_out_of_sg">You seem to be out of Singapore, so we will move your viewpoint to SG.</string>
-
-
+    <string name="km_away" translatable="false">"Distance: %2$d Km away</string>
     <!-- Booking Activity -->
 </resources>
