--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,15 @@
     <string name="no_pickup_selected"><b>Please select your pickup point.</b></string>
     <string name="distance_from_user" translatable="false">Selected Pickup Point is <b>%2d Km</b> away</string>
     <string name="km_away" translatable="false">"Distance: %2d Km away</string>
+
+    <string name="network_error">Network Error, Please Try Again</string>
+    <string name="check_internet_connection">Check your internet connection</string>
+
     <!-- Booking Activity -->
+    <string name="fetched_drop_off">Fetched Drop-Off Points.</string>
+    <string name="booking_dialog_title">BOOKING INFORMATION</string>
+    <string name="start_date">Start Date:</string>
+    <string name="end_date">End Date:</string>
+
+    <string name="confirm_and_book">Confirmation for Booking</string>
 </resources>
