--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="end_date">End Date:</string>
 
     <string name="confirm_and_book">Confirmation for Booking</string>
+    <string name="booking_confirm">BOOKING CONFIRMED!!</string>
+    <string name="proceed_to_main">PROCEED TO MAIN</string>
 </resources>
