--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="booking_dialog_title">BOOKING INFORMATION</string>
     <string name="start_date">Start Date:</string>
     <string name="end_date">End Date:</string>
+    <string name="your_pickup_point">Your Pickup Point</string>
 
     <string name="confirm_and_book">Confirmation for Booking</string>
     <string name="booking_confirm">BOOKING CONFIRMED!!</string>
